eZ publish changelog:
---------------------

Changes from 2.1 to
-----------------
* Added discussion to polls
* Moved preamble/header/footer to one file.
* Added support for PostgreSQL and Informix
* Added cache control in site manager ( possibility to clear cache )
* Added site.ini editing under site manager
* Added custom php/html file upload/edit in sistemanager
* Added possibility to override sender info when sending bulkmails with settings in site.ini
* Added mail to friend script
* Added time publising on eZ article
* Added site map and special front page in eZ article (user site)
* Added dynamic generation of site title and meta information.
* Added internal messaging with the module eZ message.
* Added logging on articles, history of article changes.
* Added author list and author select on eZ article.
* Added topic to eZ article.
* Added attributes to eZ article.
* Added eZ quiz module.
* Added eZ form module.
* Fixed timeout problem in bulkmail loop to avoid time outs when sending e-mails


Changes from 2.1.0B3 to 2.1
---------------------------
* Added images on article categories
* Added sections on eZ article
* Bugfixes

 
Changes from 2.1.0B2 to 2.1.0B3
-------------------------------
* Added possibility to set a moderator group in eZ forum
* Added image browse to eZ article.
* Optimized eZ forum for speed.
* Added Icons for new vs old messages in eZ forum.
* Added buttons so the user can toggle the threading in eZ forum.
* Added more file details in article view.
* Bugfix: you can now have more than 2 digits on prices in eZ trade.
* Added site map in article admin
* Added range checking on article id edit/preview in admin
* Fixed reply all/forward buttons in ezmail
* Navigation buttons in the maillist in ezmail
* Added possibility to give a usergroup "root" access.
* Generalized the module linkage system
* You can restrict the access of admin users to only the modules you want

Changes from 2.1.0B1 to 2.1.0B2
-------------------------------