@@ -30,7 +30,7 @@
 
 <!-- END attached_file_list_tpl -->
 
-
+<br clear="all" />
 <!-- BEGIN page_menu_separator_tpl -->
 <br />
 
@@ -50,7 +50,7 @@
 | <a class="path" href="{www_dir}{index}/article/articlepreview/{article_id}/{next_page_number}/">{intl-next_page} &gt;&gt;</a>
 <!-- END next_page_link_tpl -->
 
-<br />
+<br clear="all" />
 
 <hr noshade="noshade" size="4" />
 
