@@ -5,3 +5,4 @@ cancel=Cancel
 name=Name
 description=Description
 sitedesign=Sitedesign
+templatestyle=Template style
