@@ -3,6 +3,7 @@ eZ publish changelog:
 
 Changes from 2.1 to
 -----------------
+* Added override system for article list and article view templates.
 * Added discussion to polls
 * Moved preamble/header/footer to one file.
 * Added support for PostgreSQL and Informix
